<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" 
        android:layout_margin="30dp">
    
    <ImageView
        android:id="@+id/ivCareCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginRight="14dp"        
        android:contentDescription="@drawable/carecenter"
        android:src="@drawable/carecenter" />

        
    <TextView
        android:id="@+id/tvCareCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/Care_Center"        
        android:textSize="25sp" />
    
    
</LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="50dp"
        android:background="#0B0B61" />

    <TextView
        android:id="@+id/tvHCNmVw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/Care_Center_Name"
        android:drawableLeft="@drawable/homecare"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvCareCenterAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/address"
        android:drawableLeft="@drawable/addresslocaton"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvHNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.9"
            android:text="@string/contact_number"
            android:drawableLeft="@drawable/contact"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0.10"
            android:clickable="true"
            android:contentDescription="@string/hello_world"
            android:onClick="performHCall"
            android:src="@drawable/call" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#0B0B61" />

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/distance"
        android:drawableLeft="@drawable/distance"
        android:textSize="20sp" />
    
    </LinearLayout>
    </ScrollView>

</LinearLayout>