<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" 
        android:layout_margin="30dp">
    
    <ImageView
        android:id="@+id/ivAddVaccine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginRight="14dp"        
        android:contentDescription="@drawable/vaccination"
        android:src="@drawable/vaccination" />

    <TextView
        android:id="@+id/tittleViewDiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dTtittle3"
		android:textColor="@android:color/holo_blue_dark"
        android:textSize="25sp"
        android:textStyle="italic" />
</LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"       
        	android:orientation="vertical" >

            <TextView
                android:id="@+id/tvMealDtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="#c8f4f3" 
        		android:layout_marginBottom="10dp"
                android:text="@string/food"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:drawableLeft="@drawable/feast"/>

            <TextView
                android:id="@+id/tvMenuDtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="#c8f4f3" 
        		android:layout_marginBottom="10dp"
                android:text="@string/menu"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:drawableLeft="@drawable/menu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvDateDtv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/date"
                    android:background="#c8f4f3" 
        			android:layout_marginBottom="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:drawableLeft="@drawable/date" />

                <TextView
                    android:id="@+id/tvTimeDtv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/time"
                    android:background="#c8f4f3" 
        			android:layout_marginLeft="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:drawableLeft="@drawable/time" />
            </LinearLayout>

            <ImageView
                android:id="@+id/alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/alarm"
                android:contentDescription="@string/hello_world"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>