<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#6699cc"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/emergency_call"
                android:src="@drawable/emacall" />

            <TextView
                android:id="@+id/tvPhn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency_call"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff" />
        </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" 
        android:layout_margin="20dp">
    
    <ImageView
        android:id="@+id/imageViewMy_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginRight="14dp"        
        android:contentDescription="@drawable/my"
        android:src="@drawable/my" />

        
    <TextView
        android:id="@+id/textMyProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/My_Profile"        
        android:textSize="20sp" />
    
    
</LinearLayout>

    <ScrollView 
      android:id="@+id/scrollView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:layout_gravity="center">
      
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="#c8f4f3" 
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/imageNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@drawable/name"
            android:src="@drawable/name" />

	    <TextView
	        android:id="@+id/viewName"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.54"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/Name" />

	 </LinearLayout>
    
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="#c8f4f3" 
        android:layout_marginBottom="10dp">
 
	    <ImageView
	        android:id="@+id/age"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:contentDescription="@drawable/age"
	        android:src="@drawable/age" />


	    <TextView
	        android:id="@+id/viewAge"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/age" />
	 </LinearLayout>
	 
      
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="#c8f4f3" 
        android:layout_marginBottom="10dp">
	    	    
	    <ImageView
        android:id="@+id/imageViewBlood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:contentDescription="@drawable/blood"
        android:src="@drawable/blood" />


	    <TextView
	        android:id="@+id/viewBloodGroup"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/Blood_group" />
	 </LinearLayout>
	 
     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="#c8f4f3" 
        android:layout_marginBottom="10dp">
	    	    
	    <ImageView
        android:id="@+id/imageViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:contentDescription="@drawable/weight"
        android:src="@drawable/weight" />


	    <TextView
	        android:id="@+id/viewWeight"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/Weight" />
	 </LinearLayout>
	 
                     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#c8f4f3" 
        android:layout_marginBottom="10dp" >
	    	    
	    <ImageView
        android:id="@+id/imageViewheight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:contentDescription="@drawable/height"
        android:src="@drawable/height" />

	    <TextView
	        android:id="@+id/viewHeight"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/Height" />
	 </LinearLayout>
	 
     
                          
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="#c8f4f3" 
        android:layout_marginBottom="10dp">
	    	    
	    <ImageView
        android:id="@+id/imageDobView"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@drawable/dob"
        android:src="@drawable/dob" />


	    <TextView
	        android:id="@+id/viewDOB"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/Date_Of_Birth" />
	 </LinearLayout>
	 
                               
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#c8f4f3" 
        android:layout_marginBottom="10dp" >
	    	    
	    <ImageView
        android:id="@+id/imageViewSp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@drawable/sp"
        android:src="@drawable/sp" />


	    <TextView
	        android:id="@+id/viewSpComment"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/Special_comment" />
	 </LinearLayout>
        
    </LinearLayout>
     </ScrollView>
     
 


   </LinearLayout>
 

   




