<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" 
        android:layout_margin="30dp">
    
    <ImageView
        android:id="@+id/ivDrCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginRight="14dp"        
        android:contentDescription="@drawable/dr"
        android:src="@drawable/dr" />

        
    <TextView
        android:id="@+id/textDrCreateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/Create_Dr_Profile"        
        android:textSize="20sp" />
    
    
</LinearLayout>

    <ScrollView 
      android:id="@+id/scrollView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:layout_gravity="center" >
      
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="#c8f4f3" 
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/imageDrName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@drawable/doctor"
            android:src="@drawable/doctor" />

	    <EditText
	        android:id="@+id/etDrName"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.54"
	        android:layout_marginLeft="5dp"
	        android:ems="10"
	        android:hint="@string/Dr_Name" />

	 </LinearLayout>
    
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#c8f4f3" 
        android:layout_marginBottom="10dp" >
 
	    <ImageView
	        android:id="@+id/imageSpecialist"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:contentDescription="@drawable/specialist"
	        android:src="@drawable/specialist" />


	    <EditText
	        android:id="@+id/createSpecialist"
	        android:layout_width="0dp"
	    	 android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/specialist" />
	 </LinearLayout>
	 
      
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#c8f4f3" 
        android:layout_marginBottom="10dp" >
	    	    
	    <ImageView
        android:id="@+id/imageContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:contentDescription="@drawable/contact"
        android:src="@drawable/contact" />


	    <EditText
	        android:id="@+id/createContact"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/contact_number" />
	 </LinearLayout>
	 
        
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#c8f4f3" 
        android:layout_marginBottom="10dp" >
	    	    
	    <ImageView
	        android:id="@+id/imageEmail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:contentDescription="@drawable/eml"
	        android:src="@drawable/eml" />


	    <EditText
	        android:id="@+id/createEmail"
	        android:inputType="textEmailAddress"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/email" />
	 </LinearLayout>
	 
                     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="#c8f4f3" >
	    	    
	    <ImageView
	        android:id="@+id/imageAddress"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:contentDescription="@drawable/address"
	        android:src="@drawable/address" />

	    <EditText
	        android:id="@+id/createAddress"
	        android:inputType="textImeMultiLine"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/address" />
	 </LinearLayout>
	 
     
               
</LinearLayout>    

 </ScrollView>
     
 <Button
     android:id="@+id/Save"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:onClick="saveDoctor"
     android:text="@string/Save"
     android:drawableLeft="@drawable/save"    
     android:layout_gravity="center"    
     android:layout_marginTop="20dp"
     android:padding="14dp"
     android:background="@drawable/rounded_blue"
     android:textColor="@android:color/white"/>


   </LinearLayout>
 

   




